Feature/white (#20)
* update rank user and show rank user, eblacklist(#19)

update rank user, show rank and blacklist

* success crud user

---------

Co-authored-by: CHIN <vominhtriet031105@gmail.com>