@@ -1,12 +1,7 @@
 package com.poly.beestaycyberknightbackend.service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Service;
-
 import com.poly.beestaycyberknightbackend.domain.Rank;
 import com.poly.beestaycyberknightbackend.domain.Role;
 import com.poly.beestaycyberknightbackend.domain.User;
@@ -18,7 +13,6 @@ import com.poly.beestaycyberknightbackend.mapper.UserMapper;
 import com.poly.beestaycyberknightbackend.repository.RankRepository;
 import com.poly.beestaycyberknightbackend.repository.RoleRepository;
 import com.poly.beestaycyberknightbackend.repository.UserRepository;
-
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -26,55 +20,78 @@ import lombok.RequiredArgsConstructor;
 public class UserService {
     
     private final UserRepository userRepository;
-
     private final RoleRepository roleRepository;
-
     private final UserMapper userMapper;
+    private final RankRepository rankRepository;
 
     private final RankRepository rankRepository;
 
     
-    public User handleCreateUser(User user){
-        return this.userRepository.save(user);
-    }
+    public UserResponse handleCreateUser(UserRequest userRequest) {
+        User user = userMapper.toUser(userRequest);
 
-    public void handleDeleteUser(long id){
-        this.userRepository.deleteById(id);
-    }
+        Long roleId = userRequest.getRoleId();
+        Integer rankId = userRequest.getRankId();
 
-    public User fetchUserById(long id){
-        return this.userRepository.findById(id)
-                .orElseThrow();
+        Role role = roleRepository.findById(roleId)
+            .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_EXISTED));
+        Rank rank = rankRepository.findById(rankId)
+            .orElseThrow(() -> new AppException(ErrorCode.RANK_NOT_EXISTED));
+
+        user.setRole(role);
+        user.setRank(rank);
+        user = userRepository.save(user);
+        return userMapper.toUserResponse(user);
     }
 
     public List<UserResponse> fetchAllUser(){
-        List<User> list = userRepository.findAll();
-        List<UserResponse> responses = list.stream().map(userlist -> userMapper.toUserResponse(userlist)).collect(Collectors.toList());
-        return  responses;
+        return userRepository.findAll()
+            .stream()
+            .map(userMapper::toUserResponse)
+            .toList();
     }
 
-    public User handleUpdateUser(User reqUser){
-        User currentUser = this.fetchUserById(reqUser.getId());
-        if (currentUser != null) {
-            currentUser.setFullname(reqUser.getFullname());
-            currentUser.setEmail(reqUser.getEmail());
-            currentUser.setPassword(reqUser.getPassword());
-            currentUser = this.userRepository.save(currentUser);
-        }
-        return currentUser;
+    public UserResponse fetchUserById(long id) {
+        return userRepository.findById(id)
+                .map(userMapper::toUserResponse)
+                .orElseThrow(() -> new RuntimeException("User với ID " + id + " không tồn tại"));
+
+                
     }
+
+    public void handleDeleteUser(long id) {
+        this.userRepository.deleteById(id);
+    }
+
+    // public User handleUpdateUser(User reqUser){
+    //     User currentUser = this.fetchUserById(reqUser.getId());
+    //     if (currentUser != null) {
+    //         currentUser.setFullname(reqUser.getFullname());
+    //         currentUser.setEmail(reqUser.getEmail());
+    //         currentUser.setPassword(reqUser.getPassword());
+    //         currentUser = this.userRepository.save(currentUser);
+    //     }
+    //     return currentUser;
+    // }
 
     public User handleGetUserByUsername(String username) {
         return this.userRepository.findByEmail(username);
     }
 
-    public User updateRoleforUser(Long userId, Long roleId){
+    public User updateRoleforUser(long userId, long roleId){
         Role role = roleRepository.findById(roleId).orElseThrow(()-> new AppException(ErrorCode.ROLE_NOT_EXISTED));
-        
         User user = userRepository.findById(userId).orElseThrow(()-> new AppException(ErrorCode.USER_NOT_EXISTED));
-
         user.setRole(role);
+        return userRepository.save(user);
+    }
 
+    public User updateUser(Long id,UserRequest request){
+        User user = userRepository.findById(id).orElseThrow(()-> new AppException(ErrorCode.USER_NOT_EXISTED));
+        Role role = roleRepository.findById(request.getRoleId()).orElseThrow(()-> new AppException(ErrorCode.ROLE_NOT_EXISTED));
+        Rank rank = rankRepository.findById(request.getRankId()).orElseThrow(()-> new AppException(ErrorCode.RANK_NOT_EXISTED));
+        userMapper.updateUser(user, request);
+        user.setRole(role);
+        user.setRank(rank);
         return userRepository.save(user);
     }
 
